Converted File data structure to be a LInkedList of RID. Unit Test 4 works half way until delete...